# BioTools

./: README.md
CRN-lib/: CMakeLists.txt  CNR-lib.cfg  README.md
CRN-lib/include/: getMassActionLawEquations.hpp  getProductsVector.hpp  getReactantsVector.hpp  getReactionMatrix.hpp  getReactionVector.hpp  getSimpleReactions.hpp  getSpeciesMap.hpp  incluidos.hpp  numberToString.hpp  overloadedMatrix.hpp  overloadedVector.hpp  unStoichem.hpp
CRN-lib/src/: .ca-model.cpp.swp  boost_test.cpp  harmonic_oscillator.cpp  harmonic_oscillator.cpp.original  overloadedMatrix.cpp
CheReNE/: CMakeLists.txt  CheReNe-lib.cfg  README.md
CheReNE/include/: cherene.hpp  libboost_includes.hpp  stl_includes.hpp
CheReNE/include/cherene/: getMassActionLawEquations.hpp  getProductsVector.hpp  getReactantsVector.hpp  getReactionMatrix.hpp  getSimpleReactions.hpp  getSpeciesMap.hpp  overloadedMatrix.hpp
CheReNE/lib/: .CMakeLists.txt.swp  CMakeLists.txt  cherene.cpp
CheReNE/src/: boost_test.cpp  ca-model.cpp
CheReNe/: README.md
CheReNe/include/cherene/: getReactionVector.hpp  numberToString.hpp  overloadedVector.hpp  unStoichem.hpp
CheReNe/src/: boost_test.cpp  overloadedMatrix.cpp
CheReNe/test/: CMakeCache.txt  Makefile  cmake_install.cmake
genomics/: CMakeLists.txt
genomics/include/: isUsefulRead.hpp
genomics/src/: .getReads.cpp.swp  getMicroSatellite.cpp  getReads.cpp  removeEscapes.cpp
kd_Calculator/: README.md  decrypt.sh  encrypt.sh  kd-calculator.cpp  kd-calculator.hpp  values.tar.gz.crypted
muskin/: CMakeLists.txt  Edit.sh  MusKin.cfg  README.md  edit.sh  editar.sh
muskin/experimental/: .HH_Model_class.hpp.swp  HH_Model_class.hpp  a.out  chem_t.cpp  chem_t.hpp  eje.cpp  example.json  headers.hpp  index_t.hpp  json.cpp  json.cpp.wk  libboost_includes.hpp  mesh.hpp  mesh.json  node.hpp  numberStrings.hpp  point_t.hpp  pointer2function.cpp  stl_includes.hpp  system_t.cpp  system_t.hpp  test.json  test1.json  toy_class.cpp  toy_class.cpp.bk  typedef.hpp  voxel.cpp  voxel.hpp  voxel_t.cpp  voxel_t.hpp
muskin/include/: chem_t.hpp  headers.hpp  index_t.hpp  iterateFD.hpp  libboost_includes.hpp  mesh.hpp  mesh_t.hpp  mglDrawData.hpp  node.hpp  node_t.hpp  numberStrings.hpp  pTreeXML.hpp  parserPrTree.hpp  point_t.hpp  stl_includes.hpp  typedef.hpp  voxel_t.hpp
muskin/lib/: CMakeLists.txt  chem_t.cpp  iterateFD.cpp  mesh.cpp  mesh_t.cpp  mglDrawData.cpp  node.cpp  node_t.cpp  pTreeXML.cpp  parserPrTree.cpp  voxel_t.cpp
muskin/src/: Point.cpp  eje.cpp  mesh_template.cpp
