CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
PROJECT(MusKin)

INCLUDE_DIRECTORIES( include )

ADD_SUBDIRECTORY( lib )

# add a target to generate API documentation with Doxygen
FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
	CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/MusKin.cfg ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
ADD_CUSTOM_TARGET(doc
	${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
	COMMENT "Generating API documentation with Doxygen" VERBATIM
)
ENDIF(DOXYGEN_FOUND)


FIND_PACKAGE(OpenMP 4.9.1 REQUIRED) 
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}") 
FIND_PACKAGE(Boost 1.54 REQUIRED) 


ADD_DEFINITIONS( --std=c++11)

ADD_EXECUTABLE(point src/Point)
ADD_EXECUTABLE(exp src/eje)

TARGET_LINK_LIBRARIES(point node)
TARGET_LINK_LIBRARIES(point mesh)
TARGET_LINK_LIBRARIES(point mgl)
TARGET_LINK_LIBRARIES(point iteratefd)
TARGET_LINK_LIBRARIES(exp voxel)
