CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
ADD_DEFINITIONS( -fopenmp --std=c++11)
#ADD_DEFINITIONS(--std=c++11)

ADD_LIBRARY(iteratefd SHARED iterateFD)
ADD_LIBRARY(prparser SHARED parserPrTree)
ADD_LIBRARY(mgldraw SHARED mglDrawData)
ADD_LIBRARY(chem SHARED chem_t)
ADD_LIBRARY(voxel SHARED voxel_t)
ADD_LIBRARY(node SHARED node_t)
ADD_LIBRARY(mesh SHARED mesh_t)

TARGET_LINK_LIBRARIES(voxel chem)

TARGET_LINK_LIBRARIES(mesh mgldraw)
TARGET_LINK_LIBRARIES(mesh prparser)
TARGET_LINK_LIBRARIES(mesh iteratefd)
